Unify front commands with player open power
